# bit-manipulation

./: .astylerc  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
bit_manipulation/include/: bit_manipulation.h
bit_manipulation/src/: bit_manipulation.cpp
bit_manipulation/tests/: test_bit_manipulation.cpp
